[tool.poetry]
name = "sardine-ieqn"
version = "0.1.0"
description = ""
authors = ["Sami <samijullien@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.1"
gymnasium = "^0.29.1"
numpy = "^1.26.4"
tyro = "^0.7.3"
ruff = "^0.3.3"
tensorboard = "^2.16.2"
wandb = "^0.16.4"
jax = "^0.4.25"
sardine-rec = {git = "https://github.com/naver/sardine.git"}
stable-baselines3 = "^2.2.1"
flax = "^0.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
